--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me</h1>
 
-<p>Email: <a href="mailto:chrisbrown@heythatsme.com">chrisbrown@heythatsme.com</a></p>
+<p>Email: <a href="mailto:chrisbrown@heythats.me">chrisbrown@heythats.me</a></p>
         </section>
 
         <aside id="sidebar">
