finished jacking sam's website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sam Shadwell</title>
+		<title>Chris Brown</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -24,17 +24,17 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Sam Shadwell</h1>
-							<p>Student, Developer</p>
+							<h1>Chris Brown</h1>
+							<p>Student, Developer, my mom thinks I'm great</p>
 						</header>
 						
 						<p><a href="resources/Resume-Website.pdf" target="_blank">Resume</a></p>
 
 						<footer>
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/samshadwell" class="fa-linkedin">LinkedIn</a></li>
-								<li><a href="https://github.com/samshadwell" class="fa-github">GitHub</a></li>
-								<li><a href="mailto:sam@samshadwell.me" class="fa-envelope">Email</a></li>
+								<li><a href="https://www.linkedin.com/in/cryobrown" class="fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://github.com/cryobrown" class="fa-github">GitHub</a></li>
+								<li><a href="mailto:chrisbrown@heythats.me" class="fa-envelope">Email</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -42,7 +42,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Samuel Shadwell</li>
+							<li>&copy; Chris Brown</li>
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
